2006-10-21    <tino@firebird.03.softkill.net>

	* COPYING re-added as my lib wants one
	* COPYING removed as it is not needed here
	
